--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
 			<h4 class="title-list">TODO</h4>
 			<img class="toggle__option" src="./assets/image/delete_list.png"></img>
 		</div>
-		<ul class="task__list">
-			<li class="task__item task">First item <img src="./assets/image/remove_item.png" class="delete__task-button"></img></li>
-		</ul>
+		<ul class="task__list"></ul>
 		<div class="form">
 			<textarea class="text__new-task" placeholder="What will be the task?"></textarea>
 			<div class="container__button">
@@ -29,7 +27,7 @@
 		</div>
 	</div>
 
-	<div class="container">
+	<div class="container inProgress__container">
 		<div class="wrapper__title">
 			<h4 class="title-list">IN PROGRESS</h4>
 			<img class="toggle__option" src="./assets/image/delete_list.png"></img>
@@ -38,7 +36,7 @@
 		</ul>
 	</div>
 
-	<div class="container">
+	<div class="container done__container">
 		<div class="wrapper__title">
 			<h4 class="title-list">DONE</h4>
 			<img class="toggle__option" src="./assets/image/delete_list.png"></img>
